@@ -1,5 +1,15 @@
 2009-02-17  Dan Williams  <dcbw@redhat.com>
 
+	* src/gconf-helpers/gconf-helpers.c
+	  src/gconf-helpers/gconf-helpers.h
+		- (nm_gconf_clear_keyring_items): clear keyring items for a
+			connection
+
+	* src/connection-editor/nm-connection-list.c
+		- (remove_connection): clear keyring items when removing a user connection
+
+2009-02-17  Dan Williams  <dcbw@redhat.com>
+
 	* src/wireless-security/eap-method.c
 	  src/wireless-security/eap-method.h
 		- Consolidate CA certificate nag dialog handling in the EAP method
